syntax = "proto3";
package gloo.api.v1;

option go_package = "github.com/solo-io/gloo/pkg/api/types/v1";

import "upstream.proto";
import "virtualservice.proto";
import "role.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

/**
 * Config is a top-level config object. It is used internally by gloo as a container for the entire set of config objects.
 */
message Config {
    repeated Upstream upstreams = 1; // The list of all upstreams defined by the user.
    repeated VirtualService virtual_services = 2; // the list of all virtual services defined by the user.
    repeated Role roles = 3; // the list roles defined by the user
}